Bulk Upload: Several changes having to do with integrating the new citation-selection page, including factoring code out of the controller into the model and updating the forward and back links and fixing a layout problem on the display_csv_file page.

--- a/public/stylesheets/bulk_upload.css
+++ b/public/stylesheets/bulk_upload.css
@@ -5,6 +5,7 @@
 .container.csv_display table {
     margin-left: auto;
     margin-right: auto;
+    clear: left;
 }
 
 .container.csv_display table caption {
